tests/consteval_diag_non_const_context_bad.stderr
tests/consteval_diag_non_const_context_bad.hop:5:1: error: HOP2075: consteval error: runtime call
