tests/consteval_diag_non_const_context_bad.hop
// Verifies const-eval diagnostic non const context is rejected.
import "compiler"

fn only_runtime() {
	compiler.error("runtime call")
}
